--- a/php_libs/smarty/configs/test.conf
+++ b/php_libs/smarty/configs/test.conf
@@ -1,11 +1,8 @@
-# 本書では説明していません。 
-# テンプレートの変数を設定ファイルのデータで置き換えることができます。
-# 下のURLを参照してください。
+# テンプレートの変数を設定ファイルのデータで置き換える
 # http://www.smarty.net/docsv2/ja/config.files.tpl
+
 title = Welcome to Smarty!
 cutoff_size = 40
 
 [setup]
 bold = true
-
-
